--- a/style.css
+++ b/style.css
@@ -3,13 +3,48 @@
   margin: 0 auto;
 }
 
+h3 {
+  font-size: 2.25rem;
+  line-height: 1.2;
+  font-weight: 600;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  color: #1d3444;
+}
+
+#orangebutton {
+  background-color: #f58a07;
+  border: #f58a07;
+  border-radius: 1.9375rem;
+  color: white;
+  padding: 12px 32px;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+#orangebutton:hover {
+  background-color: #ce7305;
+}
+#allservices-btn {
+  text-decoration: none;
+  color: #1d3444;
+}
+
 /* navbar */
 a.navbar-brand {
   font: 16px;
 }
 a.nav-link {
   font-size: 16px;
-  padding: 16px;
+}
+
+#nav-biedaalt a.nav-link:hover {
+  color: #f58a07;
+}
+
+nav #nav-link:hover {
+  color: white;
+  background-color: #f57207;
 }
 body {
   font-family: "Poppins", sans-serif;
@@ -19,7 +54,7 @@ body {
 h1 {
   color: #1d3444;
   font-weight: bold;
-  font-size: 64px;
+  font-size: 48px;
 }
 .header-content-logos ul {
   display: flex;
@@ -32,9 +67,10 @@ h1 {
   color: #f58a07;
   text-decoration: none;
   border: solid 1px white;
-  background-color: rgb(245, 238, 227);
-  border-radius: 20px;
-  padding: 10px 20px 10px 20px;
+  background-color: #f58a074d;
+  border-radius: 30px;
+  padding: 12px 32px;
+  font-size: 16px;
 }
 
 button.btn.btn-light {
@@ -48,6 +84,20 @@ button.btn.btn-light {
 .section-content-body {
   margin-top: 30px;
 }
+
+.section-content-body img {
+  width: 648px;
+  filter: grayscale(100%);
+  object-fit: cover;
+}
+.home-stats_image-wrapper {
+  height: 32rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 1.25rem;
+  width: 648px;
+}
+
 /* section-services*/
 .section-services {
   margin-top: 80px;
@@ -65,7 +115,7 @@ button.btn.btn-light {
 /* Section-Solution */
 .section-solution {
   margin-top: 100px;
-  background-color: #dceaf5;
+  background-color: #edf7ff;
 }
 .section-solution-cards {
   margin-bottom: 100px;
@@ -78,6 +128,7 @@ button.btn.btn-light {
 }
 .section-solution h1 {
   margin-top: 50px;
+  font-size: 36px;
 }
 .section-solution p {
   margin-top: 50px;
@@ -93,7 +144,7 @@ a.btn.btn-primary {
 .section-solution .card {
   padding: 32px;
   margin-top: 32px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 /* section-experience */
 .section-experience {
