--- a/services.css
+++ b/services.css
@@ -31,6 +31,11 @@ h1{
     padding: 10px 20px 10px 20px; 
 }
 
+.section-strategy-left-image img {
+    filter: grayscale(100%);
+    border-radius: 20px; 
+}
+
 .section-main-header img{
     border-radius: 20px;
 }
@@ -56,11 +61,8 @@ h1{
     border-bottom-left-radius: 20px;
     mix-blend-mode: multiply;
 }
-
-
-.orange-square{
     
-}
+
 
 /* footer */
 footer{
